# ti.map

./: .gitignore  .npmignore  .project  .travis.yml  Jenkinsfile  README.md  dangerfile.js  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: android.yml  build.yml  docs.yml  ios.yml  js.yml  regen-docs.yml
android/: .classpath  .classpath.template  .project  AndroidManifest.xml  LICENSE  build.gradle  build.properties  build.properties.example  build.xml  java-sources.txt  launch  manifest  timodule.xml
android/assets/: Leaflet.Providers.json
android/documentation/: ATTRIBUTION.md  changelog.md  index.md
android/example/: app.js  ui.js
android/example/tests/: 3d.js  annotations.js  camera.js  drawing.js  lite.js  multiMap.js  polygons.js  properties.js  routes.js  shapes.js  tileoverlay.js
android/lib/: android-maps-utils-0.5.aar  android-maps-utils-release.aar  play-services-base-11.2.2.aar  play-services-basement-11.2.2.aar  play-services-maps-11.0.4.aar  play-services-maps-11.2.2.aar  version
android/src/ti/map/: AnnotationProxy.java  CameraProxy.java  CircleProxy.java  DefaultClusterRenderer.java  HeatmapOverlayProxy.java  ImageOverlayProxy.java  LeafletProvidersProxy.java  MapBoxOfflineTileProvider.java  MapModule.java  PolygonProxy.java  PolylineProxy.java  RouteProxy.java  StreetViewPanoramaProxy.java  (+11 more)
anvil/configSet/Resources/: hammer.js
apidoc/: Annotation.yml  Camera.yml  Circle.yml  ImageOverlay.yml  Map.yml  MapPointType.yml  Polygon.yml  Polyline.yml  Route.yml  Snapshotter.yml  StreetViewPanorama.yml  TileOverlay.yml  View.yml
ios/: MapAnnotation.h  MapAnnotation.m  README  TiMapMarkerAnnotationView.h  TiMapMarkerAnnotationView.m  TiMap_Prefix.pch  build.py  manifest  module.xcconfig  titanium.xcconfig
ios/Classes/: TiCutoutCircle.h  TiCutoutCircle.m  TiMKOverlayPathUniversal.h  TiMapAnnotationProxy.h  TiMapAnnotationProxy.m  TiMapCameraProxy.h  TiMapCameraProxy.m  TiMapCircleProxy.h  TiMapCircleProxy.m  TiMapConstants.h  TiMapCustomAnnotationView.h  TiMapCustomAnnotationView.m  TiMapFeatureAnnotationProxy.h  TiMapFeatureAnnotationProxy.m  TiMapIOS7View.h  TiMapIOS7View.m  TiMapIOS7ViewProxy.h  TiMapIOS7ViewProxy.m  TiMapImageAnnotationView.h  TiMapImageAnnotationView.m  TiMapImageOverlayProxy.h  TiMapImageOverlayProxy.m  TiMapImageOverlayRenderer.h  TiMapImageOverlayRenderer.m  TiMapMarkerAnnotationView.h  TiMapMarkerAnnotationView.m  TiMapModule.h  TiMapModule.m  TiMapModuleAssets.h  TiMapModuleAssets.m  TiMapOverlayPattern.h  TiMapOverlayPattern.m  TiMapPinAnnotationView.h  TiMapPinAnnotationView.m  TiMapPolygonProxy.h  TiMapPolygonProxy.m  TiMapPolylineProxy.h  TiMapPolylineProxy.m  TiMapRouteProxy.h  TiMapRouteProxy.m  (+12 more)
ios/assets/: README
ios/documentation/: changelog.md  changelog.md.orig  index.md
ios/example/: app.js  ui.js
ios/example/tests/: annotations.js  camera.js  cluster.js  clustering.js  drawing.js  multiMap.js  polygons.js  properties.js  routes.js
ios/map.xcodeproj/: project.pbxproj
test/unit/: karma.unit.config.js  ti.map.test.js
test/unit/specs/: annotation.spec.js  camera.spec.js  circle.spec.js  constants.spec.js  imageoverlay.spec.js  mapview.spec.js  methods.spec.js  module.spec.js  polygon.spec.js  polyline.spec.js  route.spec.js  snapshotter.spec.js  streetViewPanorama.spec.js  tileoverlay.spec.js  view.spec.js
windows/: CMakeLists.txt  build_and_test.sh  generate.bat  manifest
windows/cmake/: FindHAL.cmake  FindJavascriptCore.cmake  FindLayoutEngine.cmake  FindTitaniumKit.cmake  FindTitaniumWindows_UI.cmake  FindTitaniumWindows_Utility.cmake  TiMap_Config.cmake
windows/example/: app.js
windows/include/: TiMap.hpp
windows/include/map/: Annotation.hpp  Camera.hpp  CameraAnimationParams.hpp  Constants.hpp  MapLocationTypev2.hpp  MapRegionTypev2.hpp  Route.hpp  View.hpp
windows/src/: Annotation.cpp  Camera.cpp  CameraAnimationParams.cpp  Constants.cpp  MapLocationTypev2.cpp  MapRegionTypev2.cpp  Route.cpp  TiMap.cpp  View.cpp
windows/test/: CMakeLists.txt
(+25 files in other folders)
